# QD4CSP

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
.chgnet_compilation_files/: cygraph.c
experiment_configs/: C_like_benchmark.json  SiC_like_benchmark.json  SiO2_like_benchmark.json  TiO2_benchmark.json  demo.json
mp_reference_analysis/C_24/: C_24_allowed_symmetries.json  C_band_gap_shear_modulus.pkl  C_target_data.csv  C_target_data_centroids_200_2_C_band_gap_0_1_shear_modulus_0_1.csv  config.json
mp_reference_analysis/SiC_24/: SiC_24_allowed_symmetries.json  SiC_band_gap_shear_modulus.pkl  SiC_target_data.csv  SiC_target_data_centroids_200_2_SiC_band_gap_0_1_shear_modulus_0_1.csv  config.json
mp_reference_analysis/SiO2_24/: SiO2_24_allowed_symmetries.json  SiO2_band_gap_shear_modulus.pkl  SiO2_target_data.csv  SiO2_target_data_centroids_200_2_SiO2_band_gap_0_1_shear_modulus_0_1.csv  config.json
mp_reference_analysis/TiO2_24/: TiO2_24_allowed_symmetries.json  TiO2_band_gap_shear_modulus.pkl  TiO2_target_data.csv  TiO2_target_data_centroids_200_2_band_gap_0_1_shear_modulus_0_1.csv  config.json
qd4csp/cli/: download_data.py  generate_pre_filled_config.py  map_elites_main.py  prepare_reference_data.py  reproduce_paper_results.py
qd4csp/cli/map_elites/: map_elites_main.py  prepare_reference_data.py
qd4csp/cli/reproduce_paper/: download_data.py  reproduce_paper_results.py
qd4csp/cli/utils/: all_plots_for_single_experiment.py  generate_pre_filled_config.py
qd4csp/crystal/: crystal_evaluator.py  crystal_system.py  materials_data_model.py
qd4csp/evaluation/: archive_statistics.py  average_results.py  average_statistics_generator.py  confidence_levels.py  experiment_processing.py  symmetry_evaluator.py
qd4csp/map_elites/: archive.py  cvt_csp.py  elites_utils.py
qd4csp/property_calculators/: band_gap_calculator.py  shear_modulus_calculator.py
qd4csp/reference_setup/: reference_analyser.py  reference_plotter.py
qd4csp/utils/: asign_target_values_to_centroids.py  chgnet_speed.py  docker.py  env_variables.py  experiment_parameters.py  get_mpi_structures.py  utils.py
reproduce_results/: all_plots_for_single_experiment.py
scripts/: experiment_from_config.py  generate_pre_filled_config.py  plot_one_experiment.py  prepare_reference_data.py  reproduce_paper_results.py  run_experiment.py
(+8 files in other folders)
